--- a/package.json
+++ b/package.json
@@ -1,31 +1,16 @@
 {
-  "name": "music-bot",
+  "name": "niconiconii",
   "version": "1.0.0",
-  "repository": "https://github.com/TannerGabriel/discord-music-bot.git",
-  "description": "A simple discord music bot",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write \"**/*.js\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "discord",
-    "music",
-    "bot"
-  ],
-  "author": "Gabriel Tanner",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.7.0",
-    "discord-player": "^5.2.2",
-    "discord.js": "^13.6.0",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^4.4.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "fs": "^0.0.1-security",
-    "ytdl-core": "^4.11.0"
-  },
-  "devDependencies": {
-    "prettier": "2.6.2"
+    "canvas": "^2.8.0",
+    "discord.js": "^13.4.0",
+    "dotenv": "^10.0.0"
   }
 }
